# shaku

./: Cargo.toml
examples/sqlx_generic_connection/: Cargo.toml
examples/sqlx_generic_connection/src/: main.rs
